# prog_exe

./: .gitignore  CMakeLists.txt
Problem1/: hello  hello.cpp
Problem1/hello.dSYM/Contents/Resources/DWARF/: hello
Problem1/hello.dSYM/Contents/Resources/Relocations/aarch64/: hello.yml
Problem2/: engine  engine.hpp  engine2  engine2.cpp
Problem3/: data.txt  main  main.cpp  new.eps  ode_euler.hpp  ode_solver  plot.py
Problem3/main.dSYM/Contents/Resources/DWARF/: main
Problem3/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
Problem4/program/: OSD-2  OSD-2.cpp  ic_solver.hpp  ode2  osd-2.hpp
Problem4/program/OSD-2.dSYM/Contents/: Info.plist
Problem4/program/OSD-2.dSYM/Contents/Resources/DWARF/: OSD-2
Problem4/program/OSD-2.dSYM/Contents/Resources/Relocations/aarch64/: OSD-2.yml
Problem5/program/: jacobi  jacobi.cpp  jacobi.hpp  osd-3  osd-3.cpp  osd-3.hpp  osd3
Problem5/program/jacobi_data/: inverse_result.txt  jacobi_final.txt  jacobi_intermediate.txt
Problem5/program/jacobi_data1/: jacobi_intermediate.txt  jacobi_result.txt
Problem5/program/jacobi_data2/: inverse_result.txt  jacobi.diff  jacobi_final.txt  jacobi_intermediate.txt  jacobi_norm_log.txt  plot.log.py  plot.ps
Problem6/program/: integrate  numerical_intergation_simpson.cpp  numerical_intergration_example1.cpp  simpson
Problem7/program/: intde.hpp  integrate_test  intergration.cpp  intergration.hpp
